# BTree

./: .clang-format  .gitignore  CMakeLists.txt  README.md  fc_btree.h  fc_comp.h  fc_disk_btree.h  fc_disk_fixed_alloc.h  fc_mmfile.h  fc_mmfile_win.h  vcpkg.json  version.h.in
.github/workflows/: action-cpp.yml
cmake/modules/: FindVersionHeader.cmake
include/fc/: btree.h  comp.h  details.h  disk_btree.h  disk_fixed_alloc.h  mmfile.h  mmfile_nix.h
test/: fc_catch2.h  perftest.cpp  perftest_no_simd.cpp  perftest_string.cpp  rwtest.cpp  test_statistics.cpp  test_statistics.h  unittest.cpp
